@@ -11,7 +11,6 @@
 		<h3> Table of Contents</h3>
 		<ul>
 			<li> <a href="#introduction">Introduction</a> </li>
-			<li> <a href="#availability">Availability</a> </li>
 			<li> <a href="#installation">Source Installation</a>
 			</li>
 			<li> <a href="#using">Using PDB2PQR</a> </li>
@@ -26,12 +25,26 @@
 		</ul>
 		<hr/>
 
+		
 		<a name="introduction"></a>
 		<h3>Introduction</h3>
 
 		<p> Background information on PDB2PQR, including citation information, financial
 		support, and availability, can be found at the PDB2PQR homepage (<a
 			href="http://pdb2pqr.sourceforge.net/">http://pdb2pqr.sourceforge.net/</a>).
+		</p>
+		
+		<p>
+			PDB2PQR was written by a consortium of researchers, including (in alphabetical order):
+			<ul>
+				<li> <a href="http://cholla.wustl.edu/">Nathan Baker</a> (<a href="mailto:baker@ccb.wustl.edu">baker@ccb.wustl.edu</a>) </li>
+				<li> Paul Czodrowski (<a href="mailto:paul.czodrowski@musterco.com">paul.czodrowski@musterco.com</a>) </li>
+				<li> Todd Dolinsky (<a href="mailto:todd@ccb.wustl.edu">todd@ccb.wustl.edu</a>) </li>
+				<li> <a href="http://www.chem.unl.edu/faculty/eachfaculty/li.shtml">Hui Li</a> (<a href="mailto:huili06@unlserve.unl.edu">huili06@unlserve.unl.edu</a>)
+				<li> <a href="http://propka.ki.ku.dk/~jhjensen/">Jan Jensen</a> (<a href="mailto:jhjensen@kemi.ku.dk">jhjensen@kemi.ku.dk</a>) </li>
+				<li> <a href="http://http://enzyme.ucd.ie/">Jens Nielsen</a> (<a href="mailto:Jens.Nielsen@ucd.ie">Jens.Nielsen@ucd.ie</a>) </li>
+			</ul>
+			A number of authors have also provided extensions to PDB2PQR, authorship for these extensions are given in the individual source files in the "extensions" directory.
 		</p>
 
 		<hr/>
